# biomapper

./: CMakeLists.txt  Makefile  Makefile_old  README.md
bindings/biomapper/: Makefile  build_mapper.py  mapper.cpp  mapper.hpp  mapper.py  test.py  test_mapper.py  testfile2.csv  testfile3.csv
bindings/biomapper_swig2/: build.sh  mapper.cpp  mapper.hpp  mapper.i  mapper.py  mapper_wrap.cxx  setup.py  test.py
src/: biomapper.cpp  biomapper.hpp  main.cpp
test/: __sorted_chr1_condensed_final.csv  run_tests.sh  testCollapse.csv  testfile1.csv  testfile2.csv
